# rust-example

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build-and-test.sh  build.rs  hello.hsl  hello.rs  rust-example.functions.json  rust-example.hsl  rust-example.schema.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.devcontainer/smtpd/src/config/: smtpd.yaml
src/: rust-example.rs
