[package]
name = "rust_example"
description = "Halon extras rust-example"
version = "1.0.0"
authors = ["Halon <support@halon.io>"]
edition = "2021"

[lib]
name = "rust_example"
path = "src/rust-example.rs"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.155"

[build-dependencies]
bindgen = "0.69.4"
